services/az-failure/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: az-failure

spec:
  replicas: 1

  selector:
    matchLabels:
      app: az-failure

  template:
    metadata:
      labels:
        app: az-failure

    spec:
      containers:
      - name: az-failure
        image: mykaelhunter/az-failure:latest

        ports:
        - containerPort: 8000
