services/az-failure/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: az-failure

spec:
  selector:
    app: az-failure

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
