services/az-failure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: az-failure

spec:

  rules:

  - host: az-failure.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: az-failure

            port:

              number: 80
